<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">ankit_s_application18</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_search_drugs_c">Search drugs, category...</string>
<string name="lbl_thu">Thu</string>
<string name="lbl_03_00_pm">03:00 PM</string>
<string name="lbl_103lbs">103lbs</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? Register</string>
<string name="msg_the_horror_of_t">The Horror Of The 
Second Wave Of 
COVID-19 
pandemic</string>
<string name="lbl_betadine">Betadine</string>
<string name="lbl_diet">Diet</string>
<string name="lbl_password_again">Password Again</string>
<string name="lbl_about">About</string>
<string name="lbl_top_doctor">Top Doctor</string>
<string name="lbl_description">Description</string>
<string name="msg_2640_cabin_cree">2640 Cabin Creek Rd #102 Alexandria, Virginia(VA), 22314</string>
<string name="msg_find_your_desir">Find your desire 
healt solution</string>
<string name="msg_wednesday_jun">Wednesday, Jun 23, 2021 | 10:00 AM</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_early_protectio">Early protection for
your family healt</string>
<string name="lbl_jun_10_20212">Jun 10, 2021 </string>
<string name="lbl_756cal">756cal</string>
<string name="msg_do_you_have_fev">Do you have fever?</string>
<string name="msg_have_an_account">Have an account? Sign In</string>
<string name="lbl_change">Change</string>
<string name="msg_book_an_appoint">Book an appointment</string>
<string name="lbl_dr_stevi_jessi">Dr. Stevi Jessi</string>
<string name="msg_popular_article">Popular Articles</string>
<string name="lbl_product_on_sale">Product on Sale</string>
<string name="lbl_01_00">$01.00</string>
<string name="lbl_date">Date</string>
<string name="lbl_08_00_pm">08:00 PM</string>
<string name="lbl_schedule">Schedule</string>
<string name="msg_trending_articl">Trending Articles</string>
<string name="msg_i_don_t_have_an2">I don,t have any fever, 
but headchace is painful</string>
<string name="lbl_15_99">$15.99</string>
<string name="lbl_09_00_am">09:00 AM</string>
<string name="msg_search_doctor">Search doctor, drugs, articles...</string>
<string name="lbl_reschedule">Reschedule</string>
<string name="lbl_obh_combi">OBH Combi</string>
<string name="lbl_chardiologist">Chardiologist</string>
<string name="lbl_completed">Completed</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_password">Password</string>
<string name="lbl_02_00_pm">02:00 PM</string>
<string name="lbl_1_5km_away">1,5km away</string>
<string name="lbl_6_99">$6.99</string>
<string name="lbl_3pcs">3pcs</string>
<string name="msg_obh_combi_is_a">OBH COMBI  is a cough medicine containing, Paracetamol, Ephedrine HCl, and Chlorphenamine maleate which is used to relieve coughs accompanied by flu symptoms such as fever, headache, and sneezing... Read more</string>
<string name="msg_i_have_sufferin">I have suffering from headache 
and cold for 3 days, I took 2 
tablets of dolo, but still pain</string>
<string name="lbl_5min_read2">5min read</string>
<string name="lbl_60_00">$60.00</string>
<string name="lbl_psychologist">Psychologist</string>
<string name="lbl_your_email">Your Email</string>
<string name="lbl_canceled">Canceled</string>
<string name="lbl_group">Group</string>
<string name="lbl_appointmnet">Appointmnet</string>
<string name="lbl_23">23</string>
<string name="lbl_24">24</string>
<string name="lbl_21">21</string>
<string name="lbl_22">22</string>
<string name="lbl_message">Message</string>
<string name="lbl_25">25</string>
<string name="lbl_26">26</string>
<string name="lbl_5_99">$5.99</string>
<string name="lbl_chat">Chat</string>
<string name="lbl_4_7">4,7</string>
<string name="msg_the_25_healthie">The 25 Healthiest Fruits You Can Eat, According to a Nutritionist</string>
<string name="lbl_4_9">4,9</string>
<string name="lbl_4_8">4,8</string>
<string name="lbl_100ml">100ml</string>
<string name="lbl_50ml">50ml</string>
<string name="lbl_4_0">4.0</string>
<string name="lbl_800m_away">800m away</string>
<string name="lbl_jun_9_2021">Jun 9, 2021 </string>
<string name="lbl_psikeater">Psikeater</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_send">Send</string>
<string name="lbl_10_30_am">10:30 AM</string>
<string name="lbl_doctor_detail">Doctor detail</string>
<string name="lbl_buy_now">Buy Now</string>
<string name="lbl_private">Private</string>
<string name="lbl_register">Register</string>
<string name="msg_type_message">Type message ...</string>
<string name="msg_related_article">Related Articles</string>
<string name="lbl_5_min_read">5 min read</string>
<string name="lbl_8_min_read">8 min read</string>
<string name="lbl_28_06_2021">28/06/2021</string>
<string name="msg_let_s_get_start">Let\u2019s Get Started</string>
<string name="lbl_dr_alysa_hana">Dr. Alysa Hana</string>
<string name="msg_consultion_star">Consultion Start</string>
<string name="msg_create_an_new_a">Create an new account</string>
<string name="lbl_cart">Cart</string>
<string name="lbl_messages">Messages</string>
<string name="lbl_signup2">Signup</string>
<string name="lbl_covid_19">Covid-19</string>
<string name="lbl_help">Help</string>
<string name="lbl_confirmed">Confirmed</string>
<string name="msg_comparing_the">Comparing the 
AstraZeneca and 
Sinovac COVID-19 
Vaccines</string>
<string name="lbl_1_00">$1.00</string>
<string name="msg_upload_prescrip">Upload Prescription</string>
<string name="lbl_9_99">$9.99</string>
<string name="lbl_jun_12_2021">Jun 12, 2021</string>
<string name="lbl2">\?</string>
<string name="lbl_taxes">Taxes</string>
<string name="lbl_reason">Reason</string>
<string name="lbl_2_00_pm">2:00 PM</string>
<string name="lbl_home">Home</string>
<string name="lbl_popular_product">Popular Product</string>
<string name="lbl_have_an">Have an </string>
<string name="lbl_consultation">Consultation</string>
<string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam... </string>
<string name="lbl_learn_more">Learn more</string>
<string name="lbl_admin_fee">Admin Fee</string>
<string name="msg_ok_do_you_have">Ok, Do you have fever? is the
headchace severe</string>
<string name="lbl_chest_pain">Chest pain</string>
<string name="lbl_sign_in">Sign in</string>
<string name="lbl_amelia_renata">Amelia Renata</string>
<string name="msg_order_quickly_w">Order quickly with
Prescription

</string>
<string name="lbl_75ml">75ml</string>
<string name="lbl_drugs_detail">Drugs detail</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="lbl_bodrex_herbal">Bodrex Herbal</string>
<string name="lbl_booking">Booking</string>
<string name="lbl_article">Article</string>
<string name="lbl_cancel">Cancel</string>
<string name="lbl_wed">Wed</string>
<string name="lbl_articles">Articles</string>
<string name="lbl_20pcs">20pcs</string>
<string name="lbl_09_04">09:04</string>
<string name="msg_obh_combi_is_a2">OBH COMBI  is a cough medicine containing, Paracetamol, Ephedrine HCl, and Chlorphenamine maleate which is used to relieve coughs accompanied by flu symptoms such as fever, headache, and sneezing... </string>
<string name="lbl_dr_gerty_cori">Dr. Gerty Cori</string>
<string name="lbl_healt_article">Healt article</string>
<string name="lbl_upcoming">Upcoming</string>
<string name="lbl_26_06_2021">26/06/2021</string>
<string name="lbl_01_00_pm">01:00 PM</string>
<string name="lbl_215bpm">215bpm</string>
<string name="msg_don_t_have_an_a2">Don\u2019t have an account?</string>
<string name="lbl_weight">Weight</string>
<string name="lbl_dr_maria_elena">Dr. Maria Elena</string>
<string name="lbl_panadol">Panadol</string>
<string name="lbl_appointment">Appointment</string>
<string name="lbl_61_00">$61.00</string>
<string name="msg_sign_in_to_cont">Sign in to continue</string>
<string name="lbl_5_min_ago">5 min ago</string>
<string name="lbl_jun_10_2021">Jun 10, 2021</string>
<string name="lbl_konidin">Konidin</string>
<string name="msg_i_don_t_have_an">I don,t have any fever, but headchace...</string>
<string name="lbl_fri">Fri</string>
<string name="msg_dr_marcus_hori">Dr. Marcus Horizon</string>
<string name="lbl_mon">Mon</string>
<string name="lbl_subtotal">Subtotal</string>
<string name="lbl_orthopedist">Orthopedist</string>
<string name="lbl_08_57">08:57</string>
<string name="lbl_account">account</string>
<string name="lbl_apointment">Apointment</string>
<string name="lbl_settigns">Settigns</string>
<string name="lbl_10_24">10.24</string>
<string name="lbl_tue">Tue</string>
<string name="lbl_payment_detail">Payment Detail</string>
<string name="lbl_book_apointment">Book Apointment</string>
<string name="lbl_6_min_read">6 min read</string>
<string name="msg_confirm_locatio">Confirm Location</string>
<string name="lbl_bodrexin">Bodrexin</string>
<string name="lbl_total">Total</string>
<string name="msg_traditional_her">Traditional Herbal Medicine Treatments for COVID-19</string>
<string name="lbl_dr_details">Dr Details</string>
<string name="lbl_calories">Calories</string>
<string name="lbl_20_982">$ 20.98</string>
<string name="lbl_see_all">See all</string>
<string name="lbl_sat">Sat</string>
<string name="msg_hello_how_can">Hello, How can i help you?</string>
<string name="lbl_07_00_pm">07:00 PM</string>
<string name="lbl_splash_screen">Splash Screen</string>
<string name="lbl_my_saved">My Saved</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam... Read more</string>
<string name="msg_you_can_consult">You can consult your problem to the doctor</string>
<string name="lbl_profile">Profile</string>
<string name="lbl_dr_stefi_jessi">Dr. Stefi Jessi</string>
<string name="lbl_read_more">Read more</string>
<string name="lbl">-</string>
<string name="lbl_11_00_am">11:00 AM</string>
<string name="lbl_my_cart">My Cart</string>
<string name="lbl_04_00_pm">04:00 PM</string>
<string name="lbl_online">Online</string>
<string name="msg_aditional_disco">Aditional Discount</string>
<string name="lbl_dashboard">Dashboard</string>
<string name="lbl_1">1</string>
<string name="lbl_dr_list">Dr List</string>
<string name="lbl_10_min_ago">10 min ago</string>
<string name="lbl_payment_method">Payment Method</string>
<string name="lbl_19_98">$19.98</string>
<string name="lbl_20_98">$20.98</string>
<string name="lbl_faqs">FAQs</string>
<string name="lbl_7_99">$7.99</string>
<string name="lbl_checkout">Checkout</string>
<string name="lbl_login">Login</string>
<string name="msg_dr_marcus_hori2">Dr. Marcus Horizo</string>
<string name="msg_welcome_to_hido">Welcome to HiDoc</string>
<string name="lbl_fitness">Fitness</string>
<string name="lbl_2km_away">2km away</string>
<string name="lbl_all">All</string>
<string name="lbl_sign_in2">Sign In</string>
<string name="lbl_ambulance">Ambulance</string>
<string name="lbl_10_00_am">10:00 AM</string>
<string name="msg_search_location">Search location, ZIP code..</string>
<string name="lbl_visa">VISA</string>
<string name="lbl_pharmacy">Pharmacy</string>
<string name="lbl_61_002">$ 61.00</string>
<string name="lbl_drug_details">Drug Details</string>
<string name="msg_search_articles">Search articles, news...</string>
<string name="lbl_heart_rate">Heart rate</string>
<string name="lbl_ambulance2">ambulance</string>
<string name="lbl_full_name">Full Name</string>
</resources>
