<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.ankitsapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylecyan_300">
        <ImageView android:id="@+id/imageHidoclogo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_42pxh"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_106pxv"
            android:layout_width="@dimen/_115pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_hidoclogo_1"
            tools:ignore="ContentDescription" tools:src="@drawable/img_hidoclogo_1"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcometoHiDo"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtWelcometoHiDo}"
            style="@style/txtPoppinsbold16" tools:text="@string/msg_welcome_to_hido"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSignintocont"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtSignintocont}"
            style="@style/txtPoppinsregular12_1" tools:text="@string/msg_sign_in_to_cont"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_10pxh"
            android:drawableStart="@drawable/img_system_icon_24px_message"
            android:ellipsize="end"
            android:hint="@string/lbl_your_email"
            android:id="@+id/etGroup31" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etGroup31Value}"
            android:textColorHint="@color/bluegray_300"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_10pxh"
            android:drawableStart="@drawable/img_system_icon_24px_password"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etGroup30" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etGroup30Value}"
            android:textColorHint="@color/bluegray_300"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtSignin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv"
            android:text="@{loginVM.loginModel.txtSignin}"
            style="@style/txtSolidRounded_5" tools:text="@string/lbl_sign_in"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtForgotPassword}"
            style="@style/txtPoppinsbold12" tools:text="@string/msg_forgot_password"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_238pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtConfirmation}"
            style="@style/txtPoppinsbold12" tools:text="@string/msg_don_t_have_an_a"/>
    </LinearLayout>
</layout>
